k8s/cert-manage-ingress/ingress_ssl_second.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - hosts:
        - app-laravel.kelasdevops.xyz
      secretName: laravel-app-tls
  rules:
    - host: app-laravel.kelasdevops.xyz
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: laravel
                port:
                  number: 80
