k8s/cert-manage-ingress/sample_ingress_ssl.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - hosts:
        - ingress.kelasdevops.xyz
      secretName: app-tls
  rules:
    - host: ingress.kelasdevops.xyz
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: laravel
                port:
                  number: 80
